Fix footer gap at the bottom of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,11 @@ body {
     border: none;
 }
 
+html{
+    position:relative; 
+    min-height: 100%;
+}
+
 
 h1, h2, h3 {
     font-family: Montserrat, Open Sans;
@@ -167,8 +172,11 @@ h1, h2, h3 {
 .social {
     color:#3D3D3D;
     background-color: #99B4BF;
-    display: inline-block;
     width: 100%;
+    height: 62px;
+    position: absolute;
+    bottom: 0;
+    margin-top: 25px;
 }
 
 .social ul {
@@ -179,13 +187,15 @@ h1, h2, h3 {
 .social li {
     float: left;
     list-style-type: none;
-    width: 33.2%;
+    width: 33.33%;
     height: 30px;
     margin: 0;
     text-align: center;
     font-size: 150%;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-top: solid 1px #3D3D3D;
+    border-bottom: solid 1px #3D3D3D;
 }
 
 .social a {
